# CertOps

./: .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  pyproject.toml
backend/: graph.py  main.py  schemas.py
backend/templates/: certification_report.html
data/: certops_ai_champion_output.json  certops_user_output.json  synthetic_testset.csv
frontend/: package-lock.json  package.json
frontend/public/data/: certops_ai_champion_output.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/generate/: page.tsx
frontend/src/components/: artifact-tabs.tsx  assessments-view.tsx  framework-view.tsx  item-bank-view.tsx  learning-path-view.tsx  pipeline-progress.tsx  rubrics-view.tsx  track-selector.tsx
frontend/src/lib/: api.ts  types.ts
notebooks/: 01_data_pipeline.ipynb  02_retrieval_evaluation.ipynb  03_certification_engine.ipynb
