[project]
name = "certops"
version = "0.1.0"
description = "AI-Native Certification Builder for Enterprise AI Platforms"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.0.0",
    "openai>=1.59.0",
    "langchain>=0.3.16",
    "langchain-core>=0.3.27",
    "langchain-openai>=0.2.14",
    "langchain-anthropic>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.59",
    "langsmith>=0.2.8",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.12.0",
    "langchain-tavily>=0.1.1",
    "ragas==0.2.10",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.14.0",
    "sse-starlette>=2.0.0",
    "pandas>=2.2.0",
    "rapidfuzz>=3.14.3",
    "langchain-classic>=1.0.1",
    "langchain-cohere>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "notebook>=7.0.0",
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
